<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_weather"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.WeatherFragment"
    android:background="@color/light_green">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:text="@string/cloudy_32c"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/image_clouds"
        android:src="@drawable/clouds" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_alignParentRight="true"
        android:text="@string/paris"/>

</RelativeLayout>