<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_forecast"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ForecastFragment"
    android:background="@color/light_purple">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/mon"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_sun_cloud_rain"
            android:src="@drawable/weather_sun_cloud_rain_256" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/partly_rainy"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/tue"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_sun_cloud_rain"
            android:src="@drawable/weather_sun_cloud_rain_256" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/partly_rainy"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/wed"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_sun_cloud_rain"
            android:src="@drawable/weather_sun_cloud_rain_256" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/partly_rainy"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/thu"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_sun_cloud_rain"
            android:src="@drawable/weather_sun_cloud_rain_256" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/partly_rainy"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/fri"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_sun_cloud_rain"
            android:src="@drawable/weather_sun_cloud_rain_256" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/partly_rainy"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/sat"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_sun_cloud_rain"
            android:src="@drawable/weather_sun_cloud_rain_256" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/partly_rainy"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/sun"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_sun_cloud_rain"
            android:src="@drawable/weather_sun_cloud_rain_256" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/partly_rainy"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/mon"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_sun_cloud_rain"
            android:src="@drawable/weather_sun_cloud_rain_256" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/partly_rainy"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/tue"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_sun_cloud_rain"
            android:src="@drawable/weather_sun_cloud_rain_256" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/partly_rainy"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/wed"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_sun_cloud_rain"
            android:src="@drawable/weather_sun_cloud_rain_256" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/partly_rainy"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/thu"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_sun_cloud_rain"
            android:src="@drawable/weather_sun_cloud_rain_256" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/partly_rainy"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/fri"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_sun_cloud_rain"
            android:src="@drawable/weather_sun_cloud_rain_256" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/partly_rainy"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/sat"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_sun_cloud_rain"
            android:src="@drawable/weather_sun_cloud_rain_256" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/partly_rainy"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/sun"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_sun_cloud_rain"
            android:src="@drawable/weather_sun_cloud_rain_256" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:text="@string/partly_rainy"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</LinearLayout>